Fix date alignment styling

--- a/src/style.css
+++ b/src/style.css
@@ -37,10 +37,6 @@ body {
   font-size: 2.5rem;
 }
 
-.search-params {
-  max-width: 300px;
-}
-
 .search-params form {
   box-shadow: 0px 0px 3px #aaa, -0px -0px 3px #fff;
   border-radius: 2rem;
@@ -50,7 +46,6 @@ body {
   display: flex;
   gap: .25rem;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
 }
 
@@ -69,8 +64,7 @@ form input {
 }
 
 #date {
-  padding-left: .75rem;
-  padding-right: 0;
+  text-align: end;
 }
 
 .divider {
@@ -118,12 +112,11 @@ form input {
 }
 
 .movie-info {
-  padding-left: 8px;
-  width: 79%;
+  flex: 1 1 600px;
 }
 
 .movie-title {
-  margin: 8px auto 4px auto;
+  margin: .5rem .25rem .25rem;
 }
 
 .amenities {
